@@ -6,6 +6,8 @@ TODO:
 - bird and netsnmp don't build with more than one job
 
 Latest changes:
+- Fix package virtualip-cgi and promote to version 0.4.1. There were bugs in
+  the make script and in the download package itself.
 - Fixed 'tar --exclude .svn' for dnsmasq, cifsmount and deco: option was not
   set for '*-package' targets (tar -c), but for unpack targets (tar -x).
 - Remove "depends on DS_REPLACE_KERNEL" for iptables libs 
